--- a/spring-gateway-localhost.yml
+++ b/spring-gateway-localhost.yml
@@ -51,7 +51,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8100/eureka
+      defaultZone: http://172.17.0.2:8100/eureka
     ###因为该应用为服务提供者，是eureka的一个客户端，需要注册到注册中心
     register-with-eureka: true
     ###是否需要从eureka上检索服务
